ring calculation fix; fix playerstatistics updating after match end; added recurring task to check logged in accounts